[FIX] pos_preparation_display: Preparation display show notes correctly
Current behavior:
When you add too much internal notes to an order line, the preparation
display will not display them correctly. And the notes will be
undreadable.

Steps to reproduce:
- Open PoS restaurant
- Add a product to the order
- Add some internal notes on the line (4-5 notes)
- Go in the backend and open the preparation display linked to the PoS
  you just used
- You will see the notes, but they are overlapping eachother and are
  undreadable

opw-3878256

closes odoo/enterprise#61256

X-original-commit: 7917d7f67951f34200bd7da284722f81a48d21b7

--- a/pos_preparation_display/static/src/app/components/preparation_display/preparation_display.scss
+++ b/pos_preparation_display/static/src/app/components/preparation_display/preparation_display.scss
@@ -45,3 +45,11 @@ $o-pdis-logo-size: 45px;
     top: 5px;
     right: 40px;
 }
+
+.badge {
+    min-width: fit-content;
+}
+
+.o_pdis_note {
+    flex-wrap: wrap;
+}
